--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
         <version.gson>2.8.9</version.gson>
         <version.commons-io>2.11.0</version.commons-io>
         <version.cucumber-java>7.0.0</version.cucumber-java>
-        <version.io.github.bonigarcia.webdrivermanager>5.0.3</version.io.github.bonigarcia.webdrivermanager>
+        <version.io.github.bonigarcia.webdrivermanager>5.9.1</version.io.github.bonigarcia.webdrivermanager>
         <version.io.rest-assured>4.4.0</version.io.rest-assured>
-        <version.selenium-java>4.1.1</version.selenium-java>
+        <version.selenium-java>4.8.2</version.selenium-java>
         <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
         <version.extentreports-cucumber7-adapter>1.2.0</version.extentreports-cucumber7-adapter>
-        <version.lombok>1.18.22</version.lombok>
+        <version.lombok>1.18.34</version.lombok>
         <version.formatter-maven-plugin>2.18.0</version.formatter-maven-plugin>
         <version.poi>5.2.2</version.poi>
         <threadCount>1</threadCount>
@@ -159,6 +159,12 @@
                 <artifactId>poi-ooxml</artifactId>
                 <version>${version.poi}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.browserup/browserup-proxy-core -->
+            <dependency>
+                <groupId>com.browserup</groupId>
+                <artifactId>browserup-proxy-core</artifactId>
+                <version>2.1.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -218,6 +224,11 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.14</version>
         </dependency>
 
     </dependencies>
